[gd_scene load_steps=3 format=2]

[ext_resource path="res://cenas/Inventario.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/inventory/block.png" type="Texture" id=2]

[node name="Inventario" type="Control"]
pause_mode = 2
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.184021
margin_bottom = -0.184021
mouse_filter = 2
script = ExtResource( 1 )
inventario_tamanho = Vector2( 10, 10 )
tamanho_bloco = Vector2( 32, 32 )
centralizar = true

[node name="FundoInventario" type="NinePatchRect" parent="."]
modulate = Color( 0.858824, 0.494118, 0.172549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 93.0
margin_bottom = 110.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Blocos" type="Node2D" parent="."]
pause_mode = 2

[node name="Descritivo" type="Control" parent="."]
margin_left = 770.0
margin_top = 150.0
margin_right = 810.0
margin_bottom = 190.0

[node name="Fundo" type="NinePatchRect" parent="Descritivo"]
modulate = Color( 0.98, 0.44, 0, 1 )
margin_right = 230.0
margin_bottom = 310.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Nome" type="NinePatchRect" parent="Descritivo"]
modulate = Color( 0.686275, 0.321569, 0.027451, 1 )
margin_left = 20.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 40.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Descricao" type="NinePatchRect" parent="Descritivo"]
modulate = Color( 0.686275, 0.321569, 0.027451, 1 )
margin_left = 20.0
margin_top = 50.0
margin_right = 210.0
margin_bottom = 240.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Ataque" type="NinePatchRect" parent="Descritivo"]
modulate = Color( 0.686275, 0.321569, 0.027451, 1 )
margin_left = 20.0
margin_top = 260.0
margin_right = 110.0
margin_bottom = 290.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Defesa" type="NinePatchRect" parent="Descritivo"]
modulate = Color( 0.686275, 0.321569, 0.027451, 1 )
margin_left = 120.0
margin_top = 260.0
margin_right = 210.0
margin_bottom = 290.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="NomeTexto" type="Label" parent="Descritivo"]
margin_left = 23.0
margin_top = 12.0
margin_right = 206.0
margin_bottom = 38.0
text = "AQUI VAI O TEXTO"
align = 1
valign = 1

[node name="DescricaoTexto" type="Label" parent="Descritivo"]
margin_left = 25.0
margin_top = 55.7581
margin_right = 205.0
margin_bottom = 237.758
text = "AQUI VAI O TEXTO"
autowrap = true

[node name="AtaqueTexto" type="Label" parent="Descritivo"]
margin_left = 24.0
margin_top = 264.0
margin_right = 106.0
margin_bottom = 287.0
text = "ATK = 0"
valign = 1

[node name="DefesaTexto" type="Label" parent="Descritivo"]
margin_left = 124.0
margin_top = 262.0
margin_right = 207.0
margin_bottom = 287.0
text = "DEF = 0"
valign = 1
